# skm

./: Cargo.toml  README.md
.github/workflows/: release.yml
src/: cli.rs  config.rs  github.rs  main.rs  platform.rs  prompt.rs
